--- a/vignettes/OpenStats.Rmd
+++ b/vignettes/OpenStats.Rmd
@@ -54,12 +54,15 @@ library(OpenStats)
 ###################
 # Data preparation
 ###################
-fileCon = system.file("extdata", "test_continuous.csv", 
-                      package = "OpenStats")
-read.csv(fileCon, as.is = TRUE)[60:75, c('external_sample_id'     ,
-                                         'biological_sample_group',
-                                         'sex'                    ,
-                                         'age_in_days')]
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+read.csv(fileCon, as.is = TRUE)[60:75, c(
+  "external_sample_id",
+  "biological_sample_group",
+  "sex",
+  "age_in_days"
+)]
 ```
 
 
@@ -88,33 +91,35 @@ The chunk of code below demonstrates an example of using *OpenStatsList* when th
 # Default behaviour with messages
 #######################################
 library(OpenStats)
-fileCon = system.file("extdata", "test_continuous.csv",
-                      package = "OpenStats")
-test_Cont = OpenStatsList(
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+test_Cont <- OpenStatsList(
   dataset = read.csv(fileCon),
-  testGenotype = 'experimental',
-  refGenotype  = 'control',
-  dataset.colname.genotype  = 'biological_sample_group',
-  dataset.colname.batch     = 'date_of_experiment',
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.batch = "date_of_experiment",
   dataset.colname.lifestage = NULL,
-  dataset.colname.weight    = 'weight',
-  dataset.colname.sex       = 'sex'
+  dataset.colname.weight = "weight",
+  dataset.colname.sex = "sex"
 )
 #######################################
 # OpenStatsLis behaviour without messages
 #######################################
-fileCon = system.file("extdata", "test_continuous.csv", 
-                      package = "OpenStats")
-test_Cont = OpenStatsList(
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+test_Cont <- OpenStatsList(
   dataset = read.csv(fileCon),
-  testGenotype = 'experimental',
-  refGenotype  = 'control',
-  dataset.colname.genotype  = 'biological_sample_group',
-  dataset.colname.batch     = 'date_of_experiment',
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.batch = "date_of_experiment",
   dataset.colname.lifestage = NULL,
-  dataset.colname.weight    = 'weight',
-  dataset.colname.sex       = 'sex',
-  debug                     = FALSE
+  dataset.colname.weight = "weight",
+  dataset.colname.sex = "sex",
+  debug = FALSE
 )
 # No output printed
 ```
@@ -124,30 +129,31 @@ The output of the *OpenStatsList* function is the *OpenStatsList* object that co
 
 ```{r R_hide005, echo=TRUE, eval=TRUE, results='tex'}
 library(OpenStats)
-df = read.csv(system.file("extdata", "test_continuous.csv", 
-                          package = "OpenStats"))
-OpenStatsList   = OpenStatsList(
-  dataset      = df,
-  testGenotype = 'experimental',
-  refGenotype  = 'control',
-  dataset.colname.batch     = 'date_of_experiment',
-  dataset.colname.genotype  = 'biological_sample_group',
-  dataset.colname.sex       = 'sex',
-  dataset.colname.weight    = 'weight',
-  debug                     = FALSE
+df <- read.csv(system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+))
+OpenStatsList <- OpenStatsList(
+  dataset = df,
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.batch = "date_of_experiment",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.sex = "sex",
+  dataset.colname.weight = "weight",
+  debug = FALSE
 )
-p = plot   (OpenStatsList, vars = c('Sex', 'Genotype', 'data_point'),ask=TRUE)
+p <- plot(OpenStatsList, vars = c("Sex", "Genotype", "data_point"), ask = TRUE)
 # Plot categorical variables
 p$Categorical
 # plot continuous variable
 p$Continuous
 summary(OpenStatsList,
-        style     = 'grid',
-        varnumbers= FALSE, # See more options ?summarytools::dfSummary
-        graph.col = FALSE, # Do not show the graph column
-        valid.col = FALSE, 
-        vars      = c('Sex', 'Genotype', 'data_point'))
-  
+  style = "grid",
+  varnumbers = FALSE, # See more options ?summarytools::dfSummary
+  graph.col = FALSE, # Do not show the graph column
+  valid.col = FALSE,
+  vars = c("Sex", "Genotype", "data_point")
+)
 ```
 
 *OpenStatsList* object stores many characteristics of the data, for instance, reference genotype, test genotype, original column names, factor levels etc.
@@ -212,30 +218,31 @@ library(OpenStats)
 #################
 # Continuous data - Creating OpenStatsList object
 #################
-fileCon = system.file("extdata", "test_continuous.csv", 
-                      package = "OpenStats")
-test_Cont = OpenStatsList(
-	dataset = read.csv(fileCon),
-	testGenotype = 'experimental',
-	refGenotype  = 'control',
-	dataset.colname.genotype  = 'biological_sample_group',
-	dataset.colname.batch     = 'date_of_experiment',
-	dataset.colname.lifestage = NULL,
-	dataset.colname.weight    = 'weight',
-	dataset.colname.sex       = 'sex',
-	debug                     = FALSE
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+test_Cont <- OpenStatsList(
+  dataset = read.csv(fileCon),
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.batch = "date_of_experiment",
+  dataset.colname.lifestage = NULL,
+  dataset.colname.weight = "weight",
+  dataset.colname.sex = "sex",
+  debug = FALSE
 )
 #################
 # Reference range framework
 #################
-RR_result = OpenStatsAnalysis(
-	OpenStatsList = test_Cont,
-	method        = 'RR',
-	RR_formula    = data_point ~ Genotype + Sex,
-	debug         = FALSE
+RR_result <- OpenStatsAnalysis(
+  OpenStatsList = test_Cont,
+  method = "RR",
+  RR_formula = data_point ~ Genotype + Sex,
+  debug = FALSE
 )
-lapply(RR_result,names)
-#lapply(RR_result$output,names)
+lapply(RR_result, names)
+# lapply(RR_result$output,names)
 ```
 
 ## Examples
@@ -252,26 +259,27 @@ library(OpenStats)
 #################
 # Continuous data - Creating OpenStatsList object
 #################
-fileCon = system.file("extdata", "test_continuous.csv", 
-                      package = "OpenStats")
-test_Cont = OpenStatsList(
-	dataset = read.csv(fileCon),
-	testGenotype = 'experimental',
-	refGenotype  = 'control',
-	dataset.colname.genotype  = 'biological_sample_group',
-	dataset.colname.batch     = 'date_of_experiment',
-	dataset.colname.lifestage = NULL,
-	dataset.colname.weight    = 'weight',
-	dataset.colname.sex       = 'sex',
-	debug                     = FALSE
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+test_Cont <- OpenStatsList(
+  dataset = read.csv(fileCon),
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.batch = "date_of_experiment",
+  dataset.colname.lifestage = NULL,
+  dataset.colname.weight = "weight",
+  dataset.colname.sex = "sex",
+  debug = FALSE
 )
 #################
 # LinearMixed model (MM) framework
 #################
-MM_result = OpenStatsAnalysis(
-	OpenStatsList = test_Cont,
-	method   = 'MM',
-	MM_fixed = data_point ~ Genotype  + Weight
+MM_result <- OpenStatsAnalysis(
+  OpenStatsList = test_Cont,
+  method = "MM",
+  MM_fixed = data_point ~ Genotype + Weight
 )
 ```
 #### Sub-model estimation
@@ -287,31 +295,34 @@ library(OpenStats)
 #################
 # Continuous data - Creating OpenStatsList object
 #################
-fileCon = system.file("extdata", "test_continuous.csv", 
-                      package = "OpenStats")
-test_Cont = OpenStatsList(
-	dataset = read.csv(fileCon),
-	testGenotype = 'experimental',
-	refGenotype  = 'control',
-	dataset.colname.genotype  = 'biological_sample_group',
-	dataset.colname.batch     = 'date_of_experiment',
-	dataset.colname.lifestage = NULL,
-	dataset.colname.weight    = 'weight',
-	dataset.colname.sex       = 'sex',
-	debug                     = FALSE
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+test_Cont <- OpenStatsList(
+  dataset = read.csv(fileCon),
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.batch = "date_of_experiment",
+  dataset.colname.lifestage = NULL,
+  dataset.colname.weight = "weight",
+  dataset.colname.sex = "sex",
+  debug = FALSE
 )
 #################
 # LinearMixed model (MM) framework
 #################
-MM_result = OpenStatsAnalysis(
-	OpenStatsList = test_Cont,
-	method        = 'MM',
-	MM_fixed      = data_point ~ Genotype  + Weight,
-	debug         = FALSE
+MM_result <- OpenStatsAnalysis(
+  OpenStatsList = test_Cont,
+  method = "MM",
+  MM_fixed = data_point ~ Genotype + Weight,
+  debug = FALSE
 )
 # SplitEffect estimation with respect to the Sex levels
-Spliteffect = OpenStatsComplementarySplit(object    = MM_result,
-                                          variables = 'Sex')
+Spliteffect <- OpenStatsComplementarySplit(
+  object = MM_result,
+  variables = "Sex"
+)
 class(Spliteffect)
 ```
 
@@ -326,26 +337,27 @@ library(OpenStats)
 #################
 # Continuous data - Creating OpenStatsList object
 #################
-fileCon = system.file("extdata", "test_continuous.csv", 
-                      package = "OpenStats")
-test_Cont = OpenStatsList(
-	dataset = read.csv(fileCon),
-	testGenotype = 'experimental',
-	refGenotype  = 'control',
-	dataset.colname.genotype  = 'biological_sample_group',
-	dataset.colname.batch     = 'date_of_experiment',
-	dataset.colname.lifestage = NULL,
-	dataset.colname.weight    = 'weight',
-	dataset.colname.sex       = 'sex',
-	debug                     = FALSE
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+test_Cont <- OpenStatsList(
+  dataset = read.csv(fileCon),
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.batch = "date_of_experiment",
+  dataset.colname.lifestage = NULL,
+  dataset.colname.weight = "weight",
+  dataset.colname.sex = "sex",
+  debug = FALSE
 )
 #################
 # Reference range framework
 #################
-RR_result = OpenStatsAnalysis(
-	OpenStatsList = test_Cont,
-	method        = 'RR',
-	RR_formula    = data_point ~ Genotype + Sex
+RR_result <- OpenStatsAnalysis(
+  OpenStatsList = test_Cont,
+  method = "RR",
+  RR_formula = data_point ~ Genotype + Sex
 )
 ```
 
@@ -357,26 +369,27 @@ library(OpenStats)
 #################
 # Categorical data - Creating OpenStatsList object
 #################
-fileCat   = system.file("extdata", "test_categorical.csv", 
-                        package = "OpenStats")
-test_Cat = OpenStatsList(
-	dataset      = read.csv(fileCat, na.strings = '-'),
-	testGenotype = 'Aff3/Aff3',
-	refGenotype  = '+/+',
-	dataset.colname.genotype  = 'Genotype',
-	dataset.colname.batch     = 'Assay.Date',
-	dataset.colname.lifestage = NULL,
-	dataset.colname.weight    = 'Weight',
-	dataset.colname.sex       = 'Sex',
-	debug                     = FALSE
+fileCat <- system.file("extdata", "test_categorical.csv",
+  package = "OpenStats"
+)
+test_Cat <- OpenStatsList(
+  dataset = read.csv(fileCat, na.strings = "-"),
+  testGenotype = "Aff3/Aff3",
+  refGenotype = "+/+",
+  dataset.colname.genotype = "Genotype",
+  dataset.colname.batch = "Assay.Date",
+  dataset.colname.lifestage = NULL,
+  dataset.colname.weight = "Weight",
+  dataset.colname.sex = "Sex",
+  debug = FALSE
 )
 #################
 # Fisher's exact test framework
 #################
-FE_result = OpenStatsAnalysis(
-	OpenStatsList = test_Cat,
-	method     = "FE",
-	FE_formula =  Thoracic.Processes ~ Genotype + Sex 
+FE_result <- OpenStatsAnalysis(
+  OpenStatsList = test_Cat,
+  method = "FE",
+  FE_formula = Thoracic.Processes ~ Genotype + Sex
 )
 ```
 
@@ -411,27 +424,28 @@ library(OpenStats)
 #################
 # Continuous data - Creating OpenStatsList object
 #################
-fileCon = system.file("extdata", "test_continuous.csv", 
-                      package = "OpenStats")
-test_Cont = OpenStatsList(
-	dataset = read.csv(fileCon),
-	testGenotype = 'experimental',
-	refGenotype  = 'control',
-	dataset.colname.genotype  = 'biological_sample_group',
-	dataset.colname.batch     = 'date_of_experiment',
-	dataset.colname.lifestage = NULL,
-	dataset.colname.weight    = 'weight',
-	dataset.colname.sex       = 'sex',
-	debug                     = FALSE
+fileCon <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
+test_Cont <- OpenStatsList(
+  dataset = read.csv(fileCon),
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.batch = "date_of_experiment",
+  dataset.colname.lifestage = NULL,
+  dataset.colname.weight = "weight",
+  dataset.colname.sex = "sex",
+  debug = FALSE
 )
 #################
 # LinearMixed model (MM) framework
 #################
-MM_result = OpenStatsAnalysis(
-	OpenStatsList = test_Cont,
-	method        = 'MM',
-	MM_fixed      = data_point ~ Genotype  + Weight,
-	debug         = FALSE
+MM_result <- OpenStatsAnalysis(
+  OpenStatsList = test_Cont,
+  method = "MM",
+  MM_fixed = data_point ~ Genotype + Weight,
+  debug = FALSE
 )
 summary(MM_result)
 ```
@@ -441,13 +455,14 @@ summary(MM_result)
 
 ```{r R_hide015, results='tex', echo=TRUE, eval=TRUE}
 strtrim(
-OpenStatsReport(
-	object = MM_result,
-	JSON = TRUE,
-	RemoveNullKeys = TRUE,
-	pretty = TRUE
-),
-1500)
+  OpenStatsReport(
+    object = MM_result,
+    JSON = TRUE,
+    RemoveNullKeys = TRUE,
+    pretty = TRUE
+  ),
+  1500
+)
 ```
 
 
@@ -457,27 +472,28 @@ Graphics in *OpenStats* are as easy as calling the **plot()** function on a Open
 ```{r R_hide017, results='tex', echo=TRUE, eval=TRUE}
 library(OpenStats)
 ###################
-file = system.file("extdata", "test_continuous.csv", 
-                   package = "OpenStats")
+file <- system.file("extdata", "test_continuous.csv",
+  package = "OpenStats"
+)
 ###################
 # OpenStatsList object
 ###################
-OpenStatsList   = OpenStatsList(
-	dataset   = read.csv(file),
-	testGenotype = 'experimental',
-	refGenotype = 'control',
-	dataset.colname.batch = 'date_of_experiment',
-	dataset.colname.genotype = 'biological_sample_group',
-	dataset.colname.sex = 'sex',
-	dataset.colname.weight = 'weight',
-	debug = FALSE
+OpenStatsList <- OpenStatsList(
+  dataset = read.csv(file),
+  testGenotype = "experimental",
+  refGenotype = "control",
+  dataset.colname.batch = "date_of_experiment",
+  dataset.colname.genotype = "biological_sample_group",
+  dataset.colname.sex = "sex",
+  dataset.colname.weight = "weight",
+  debug = FALSE
 )
-plot   (OpenStatsList)
+plot(OpenStatsList)
 summary(
   OpenStatsList,
-  style     = 'grid',
-  varnumbers = FALSE, 	  # See more options ?summarytools::dfSummary
-  graph.col = FALSE,  	  # Do not show the graph column
+  style     = "grid",
+  varnumbers = FALSE, # See more options ?summarytools::dfSummary
+  graph.col = FALSE, # Do not show the graph column
   valid.col = FALSE
 )
 ```
@@ -507,10 +523,10 @@ Fisher's exact test framework:
 Below shows an example for the *OpenStatsMM* output:
 
 ```{r R_hide018, results='tex', echo=TRUE, eval=TRUE}
-	plot(MM_result, col = 2)
+plot(MM_result, col = 2)
 ```
 
 ### Session information
 ```{r R_hide0175, results='tex', echo=TRUE, eval=TRUE}
- sessionInfo()
+sessionInfo()
 ```
